--- a/W1 WIF2003 Tuto/jobs.html
+++ b/W1 WIF2003 Tuto/jobs.html
@@ -50,14 +50,14 @@
             <label for="photo">Upload your photo:</label><br>
             <input type="file" id="photo" name="photo" accept="image/*" required><br><br>
 
-            <input type="submit" value="Apply Now" name="submit">
+            <input type="submit" value="Apply Now" name="submit"><br><br>
             
 
     </main>
     <footer>
         <small>
-            <p><i>Copyright &copy; 2024 JavaJam Coffee House</i></p>
-            <p><i><a href="mailto:ingzhen2003@gmail.com">ingzhen2003@gmail.com</a></i></p>
+            <i>Copyright &copy; 2024 JavaJam Coffee House</i><br>
+            <i><a href="mailto:ingzhen2003@gmail.com">ingzhen2003@gmail.com</a></i>
         </small>
     </footer>
 </body>
