--- a/W1 WIF2003 Tuto/menu.html
+++ b/W1 WIF2003 Tuto/menu.html
@@ -31,8 +31,8 @@
     </main>
     <footer>
         <small>
-            <p><i>Copyright &copy; 2024 JavaJam Coffee House</i></p>
-            <p><i><a href="mailto:ingzhen2003@gmail.com">ingzhen2003@gmail.com</a></i></p>
+            <i>Copyright &copy; 2024 JavaJam Coffee House</i><br>
+            <i><a href="mailto:ingzhen2003@gmail.com">ingzhen2003@gmail.com</a></i>
         </small>
     </footer>
 </body>
