--- a/W1 WIF2003 Tuto/music.html
+++ b/W1 WIF2003 Tuto/music.html
@@ -28,9 +28,9 @@
         <h4>
             January
         </h4>
-        <img src="melaniethumb.jpg">
         <p>
-        Melanie Morris entertains with her melodic folk style.
+            <a href="melanie.jpg"><img src="melaniethumb.jpg" alt="Melanie Morris" width="80" height="80"></a>
+            Melanie Morris entertains with her melodic folk style
         </p>
         </div>
 
@@ -38,17 +38,15 @@
             <h4>
                 February
             </h4>
-            <img src="gregthumb.jpg">
-            <p>
-                Tahoe Greg is back from his tour. New songs. New stories.
-            </p> <!-- This can be achieved with div following the guideline-->
-        </div>
-
+        <p>
+            <a href="greg.jpg"><img src="gregthumb.jpg" alt="Tahoe Grey" width="80" height="80"></a>
+            Tahoe Greg is back from his tour. New songs. New stories.
+        </p>
     </main>
     <footer>
         <small>
-            <p><i>Copyright &copy; 2024 JavaJam Coffee House</i></p>
-            <p><i><a href="mailto:ingzhen2003@gmail.com">ingzhen2003@gmail.com</a></i></p>
+            <i>Copyright &copy; 2024 JavaJam Coffee House</i><br>
+            <i><a href="mailto:ingzhen2003@gmail.com">ingzhen2003@gmail.com</a></i>
         </small>
     </footer>
 </body>
